(fix) positioning of Leave Reminder button fixed (no overlap on small screens)

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -160,9 +160,6 @@ select {
 }
 
 .reminder-btn {
-  position: absolute;
-  left: 65%;
-  bottom: 2%;
 }
 
 @media screen and (max-width: 768px) {
